ECOM CHANGES
ECOM APP CHANGES DUMPED